--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
+    "react-scripts": "^5.0.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "npm run build && gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,7 +42,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.0",
-    "react-scripts": "^5.0.1"
+    "gh-pages": "^6.1.0"
   }
 }
